Style Navbar and slider

--- a/templates/ecom/navbar.html
+++ b/templates/ecom/navbar.html
@@ -13,8 +13,8 @@ body {
 }
 
 #navbar {
-    background-color: #3e454c;
-    color: black;
+    background-color: #410F13;
+    color: white;
 }
 
 .row1 {
@@ -35,8 +35,8 @@ body {
 }
 
 .navbar-button {
-    background-color: #e5bc41;
-    border: 1px solid #e5bc41;
+    background-color: #E1A87A;
+    border: 1px solid #E1A87A;
     border-radius: 0 2px 2px 0;
     color: #565656;
     padding: 10px 0;
@@ -46,7 +46,7 @@ body {
 
 .cart-button {
     /* background-color: #bfbfbf; */
-    background-color: #E5BC41;
+    background-color: #E1A87A;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .23), inset 1px 1px 0 0 hsla(0, 0%, 100%, .2);
     padding: 10px 0;
     text-align: center;
@@ -207,7 +207,7 @@ body {
         </div>
         <div class="row row2">
             <div class="col-sm-3">
-                <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">Simple Ecommerce </span></a></h2>
+                <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">Artisan Alley</span></a></h2>
             </div>
 
 
