--- a/templates/ecom/index.html
+++ b/templates/ecom/index.html
@@ -31,7 +31,8 @@ html {
 }
 
 body {
-  background-color:#f7f7f7;
+  background-color:#410F13;
+  overflow-x: hidden; 
 }
 
 .page-wrapper {
@@ -321,10 +322,9 @@ img {
 }
 
 .slider-container{
-  height: 35%;
+  height: 50%;
   width: 100%;
   position: relative;
-  overflow: hidden; 
   text-align: center;
 }
 
@@ -345,7 +345,7 @@ img {
   border-radius: 50px;
   margin: 0 .2em 1em;
   &:hover {
-    background: red;
+    background: #410F13;
   }
 }
 
@@ -357,8 +357,8 @@ img {
   left: 100%;
   z-index: 10;
   padding: 8em 1em 0;
-  background-size: cover;
-  background-position: 50% 50%;
+  background-size:cover;
+  background-position: 100%;
   transition: left 0s .75s;
 }
 
@@ -369,16 +369,16 @@ img {
 }
 
 .slide-1 {
-  background-image: url("{% static 'images/ecom-banner1.jpg' %}");
+  background-image: url("{% static 'images/back1.jpg' %}");
 }
 .slide-2 {
-  background-image: url("{% static 'images/ecom-banner4.jpg' %}");
+  background-image: url("{% static 'images/back2.jpg' %}");
 }
 .slide-3 {
-  background-image: url("{% static 'images/ecom-banner1.png' %}");
+  background-image: url("{% static 'images/back3.jpg' %}");
 }
 .slide-4 {
-  background-image: url("{% static 'images/ecom-banner3.jpg' %}");
+  background-image: url("{% static 'images/back4.jpg' %}");
 }
   </style>
 
@@ -460,7 +460,7 @@ img {
 </div>
 <!-- products data enddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd -->
 {%else%}
-<h3 style="text-align:center; color:#3E454C;">No Search Found</h3>
+<h3 style="text-align:center; color:white;">No Search Found</h3>
 {%endif%}
 
 <script>
