--- a/templates/ecom/customersignup.html
+++ b/templates/ecom/customersignup.html
@@ -21,14 +21,14 @@ box-sizing: border-box;
 }
 section{
     width: 30%;
-    height: 610px;
-    margin-top: 100px;
+    height: 640px;
+    margin-top: 70px;
     border-radius: 10px;
     background-image: url("{% static 'images/back6.jpg' %}");
     position: relative;
     left: 5px;
-    mix-blend-mode: soft-light;
-    opacity: 0.6;
+    mix-blend-mode: hard-light;
+    opacity: 0.8;
     background-image: contain;
     background-position: 50% 50%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -51,7 +51,7 @@ section{
     background: white;
     text-align: center;
     transition: 0.25s;
-    margin-top: 100px;
+    margin-top: 70px;
     border-radius: 10px;  
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -196,7 +196,7 @@ a.socialIcon:hover,
                                   {% render_field customerForm.profile_pic class="form-control" placeholder="Profile pic" %}
                   
                     <input type="submit" name="" value="Create">
-
+                    <p>Already have an account? <a class="profile-links" href="/customerlogin">Login</a></p>
                 </form>
             </div>
         </div>
