--- a/templates/ecom/index.html
+++ b/templates/ecom/index.html
@@ -360,6 +360,7 @@ img {
   background-size:cover;
   background-position: 100%;
   transition: left 0s .75s;
+  mix-blend-mode: hard-light;
 }
 
 [id^="slide"]:checked + .slide {
