--- a/templates/ecom/customerlogin.html
+++ b/templates/ecom/customerlogin.html
@@ -66,10 +66,10 @@ section{
     padding: 10px 10px;
     width: 250px;
     outline: none;
-    color: white;
+    color: black;
     border-radius: 10px;
     transition: 0.25s;
-    font-size: 15px;
+    font-size: 18px;
     font-family: 'League Gothic';
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
