--- a/templates/ecom/customer_base.html
+++ b/templates/ecom/customer_base.html
@@ -7,7 +7,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<title>Simple E-commerce</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+<title>Artisan Alley</title>
 
 <style>
 body {
@@ -15,8 +18,14 @@ body {
 }
 
 #navbar {
-    background-color: #3e454c;
+    background-color: #410F13;
     color: black;
+    font-family: 'League Gothic';
+}
+.col-sm-3{
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 .row1 {
@@ -37,8 +46,8 @@ body {
 }
 
 .navbar-button {
-    background-color: #e5bc41;
-    border: 1px solid #e5bc41;
+    background-color: #E1A87A;
+    border: 1px solid #E1A87A;
     border-radius: 0 2px 2px 0;
     color: #565656;
     padding: 10px 0;
@@ -48,7 +57,7 @@ body {
 
 .cart-button {
     /* background-color: #bfbfbf; */
-    background-color: #E5BC41;
+    background-color: #E1A87A;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .23), inset 1px 1px 0 0 hsla(0, 0%, 100%, .2);
     padding: 10px 0;
     text-align: center;
@@ -170,6 +179,12 @@ body {
     margin-left: 15px;
     margin-top: 15px
 }
+.logo{
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  margin: 0;
+}
 
 .menu {
     cursor: pointer
@@ -261,8 +276,9 @@ body {
         </div>
         <div class="row row2">
             <div class="col-sm-3">
-                <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">Simple Ecommerce </span></a></h2>
-            </div>
+              <h2 style="margin:0px;"><a style="text-decoration:none; color:white;" href="/"><span class="largenav">ARTISAN 
+                <img src="{% static 'images/logo.png' %}" class="logo">
+                ALLEY </span></a></h2>            </div>
 
             <div class="navbar-search smallsearch col-sm-7 col-xs-11">
               <form  action="/search" method="get">
