Style my profile and edit profile page

--- a/templates/ecom/edit_profile.html
+++ b/templates/ecom/edit_profile.html
@@ -14,7 +14,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #0072ff, #8811c5);
+      background: -webkit-linear-gradient(left, #410F13, #E1A87A);
       color: #fff;
       font-weight: bold;
       line-height: 80px;
@@ -36,7 +36,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background: #0062cc;
+      background: #410F13;
       color: #fff;
     }
 
