--- a/templates/ecom/my_profile.html
+++ b/templates/ecom/my_profile.html
@@ -7,6 +7,14 @@
   body {
     background-color:#f7f7f7;
   }
+  .edit{
+    background-color: #410F13;
+    color: white;
+  }
+  .edit:hover{
+    background-color:#E1A87A;
+    color: black;
+  }
   .button {
   display: inline-block;
   border-radius: 4px;
@@ -53,7 +61,7 @@
 <div style="padding-left:300px;" class="container">
 
         <div class="col-sm-2 col-md-2">
-            <img src="{% static customer.profile_pic.url %}"   alt="profile pic" class="img-rounded img-responsive" />
+            <img src="{% static profile_pic.url %}"   alt="profile pic" class="img-rounded img-responsive" />
         </div>
         <div class="col-sm-4 col-md-4">
             <blockquote>
@@ -66,7 +74,7 @@
 </div>
 <br>
 <div style="text-align: center;">
-  <a href="/edit-profile"><button class="btn btn-primary btn-lg" ><span>Edit Profile </span></button></a>
+  <a href="/edit-profile"><button class="btn btn-lg edit" ><span>Edit Profile </span></button></a>
 </div>
 <br><br><br><br><br><br>
 <!--
