--- a/templates/ecom/customer_base.html
+++ b/templates/ecom/customer_base.html
@@ -94,7 +94,7 @@ body {
     padding: 3px 6px;
     font-weight: 500;
     display: inline-block;
-    color: #fff;
+    color: black;
     line-height: 12px;
     margin-left: 10px
 }
