Style the admin dashboard and some changes in the user page

--- a/templates/ecom/admin_base.html
+++ b/templates/ecom/admin_base.html
@@ -83,7 +83,7 @@
 
 
   <div class="bs-example">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#343A40;">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background:#410F13;">
       <a href="/" class="navbar-brand">Admin Panel</a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
