--- a/templates/ecom/admin_dashboard.html
+++ b/templates/ecom/admin_dashboard.html
@@ -4,7 +4,12 @@
 <br>
 {%include 'ecom/admin_dashboard_cards.html'%}
 <br><br><br><br><br>
-
+<style>
+  .panel-heading{
+    background-color: #410F13 !important;
+    color: white !important;
+  }
+</style>
 <hr><hr>
 <div class="container" >
 
