--- a/templates/ecom/edit_profile.html
+++ b/templates/ecom/edit_profile.html
@@ -14,7 +14,7 @@
     .note {
       text-align: center;
       height: 80px;
-      background: -webkit-linear-gradient(left, #410F13, #E1A87A);
+      background: linear-gradient(to left, #8C1D40, #5D1420, #410F13);  
       color: #fff;
       font-weight: bold;
       line-height: 80px;
