--- a/templates/ecom/admin_dashboard_cards.html
+++ b/templates/ecom/admin_dashboard_cards.html
@@ -31,7 +31,7 @@
     }
 
     .market-update-block.clr-block-1 {
-      background: #DC3545;
+      background: #0F4140;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
@@ -41,7 +41,7 @@
     }
 
     .market-update-block.clr-block-2 {
-      background: #28A745;
+      background:  #6B3E26;
       margin-right: 0.8em;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
@@ -51,7 +51,7 @@
     }
 
     .market-update-block.clr-block-3 {
-      background: #6C757D;
+      background: #9E8A82;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
@@ -60,7 +60,7 @@
     }
 
     .market-update-block.clr-block-1:hover {
-      background: #3C3C3C;
+      background:   #3A3A3C;
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
@@ -68,7 +68,7 @@
     }
 
     .market-update-block.clr-block-2:hover {
-      background: #3C3C3C;
+      background:   #3A3A3C;
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
@@ -76,7 +76,7 @@
     }
 
     .market-update-block.clr-block-3:hover {
-      background: #3C3C3C;
+      background:   #3A3A3C;
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
       -moz-transition: 0.5s all;
@@ -85,7 +85,7 @@
 
     .market-update-right i.fa.fa-users {
       font-size: 3em;
-      color: #343A40;
+      color:   #3A3A3C;
       width: 80px;
       height: 80px;
       background: #fff;
@@ -99,7 +99,7 @@
 
     .market-update-right i.fa.fa-shopping-cart {
       font-size: 3em;
-      color: #343A40;
+      color:   #3A3A3C;
       width: 80px;
       height: 80px;
       background: #fff;
@@ -113,7 +113,7 @@
 
     .market-update-right i.fa.fa-bar-chart {
       font-size: 3em;
-      color: #343A40;
+      color:   #3A3A3C;
       width: 80px;
       height: 80px;
       background: #fff;
