--- a/templates/ecom/admin_update_customer.html
+++ b/templates/ecom/admin_update_customer.html
@@ -11,9 +11,9 @@
     .note {
       text-align: center;
       height: 80px;
-      background: #0F2027;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to left, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to left, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: #5D1420;  /* A deeper wine red */
+      background: -webkit-linear-gradient(to left, #8C1D40, #5D1420, #410F13);  
+      background: linear-gradient(to left, #8C1D40, #5D1420, #410F13);  
 
       color: #fff;
       font-weight: bold;
@@ -36,7 +36,7 @@
       padding: 1%;
       width: 20%;
       cursor: pointer;
-      background:#009414;
+      background:#410F13;
       color: #fff;
     }
 
